# template_streamlit_jira

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docker/: .env.template  Dockerfile  docker-compose.yml
src/: main.py
src/config/: conf_logger.py  config.py
src/core/back/: connector.py
src/core/db/: connector.py  sql.py
src/core/db/temp/: baza.db
