[project]
name = "cleany-stake"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "atlassian-python-api>=4.0.3",
    "pandas>=2.2.3",
    "pendulum>=3.1.0",
    "python-decouple>=3.8",
    "streamlit>=1.45.0",
    "streamlit-aggrid>=1.1.4.post1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.ruff]
extend-exclude = []
line-length = 124

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 124

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
